--- a/src/styles.css
+++ b/src/styles.css
@@ -34,8 +34,6 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     position: absolute;
     top: 0px;
     left: 0px;
-    width: 100%;
-    height: 100%;
 }
 
 #toolbox {
@@ -43,15 +41,17 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     top: 60%;
     left: 0px;
     width: 100%;
-    height: 100%;
+    height: calc(40% - 40px);
 }
 
 #toolbox-timeline {
     background-color: blue;
+    height: 20px;
 }
 
 #toolbox-toolbar {
     background-color: green;
+    height: 20px;
 }
 
 #toolbox-contents {
