--- a/src/styles.css
+++ b/src/styles.css
@@ -42,7 +42,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   left: 0px;
   width: 100%;
   font-family: sans-serif;
-  height: calc(40%);
+  height: 60%;
   display: flex;
   flex-direction: column;
   --toolbox-background: #f9f9fa;
@@ -51,7 +51,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #toolbox-timeline {
   height: 35px;
   margin-top: -5px;
-  background: var(--toolbox-background);
+  background: var(--theme-toolbar-background);
   border-top: 1px solid var(--theme-splitter-color);
 }
 
@@ -59,7 +59,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   height: 35px;
   border-top: 0px;
   padding-left: 18px;
-  background: var(--toolbox-background);
+  background: var(--theme-toolbar-background);
   border-bottom: 1px solid var(--theme-splitter-color);
 }
 
@@ -154,3 +154,6 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 @import url("devtools/client/debugger/src/debugger.css");
 @import url("devtools/client/debugger/dist/vendors.css");
 @import url("devtools/client/themes/splitters.css");
+@import url("devtools/client/shared/sourceeditor/codemirror/lib/codemirror.css");
+@import url("devtools/client/themes/dark-theme.css");
+@import url("devtools/client/themes/light-theme.css");
