--- a/src/devtools/client/debugger/src/components/shared/Modal.css
+++ b/src/devtools/client/debugger/src/components/shared/Modal.css
@@ -3,12 +3,12 @@
  * file, You can obtain one at <http://mozilla.org/MPL/2.0/>. */
 
 .modal-wrapper {
-  position: fixed;
+  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 60px);
   top: 0;
   left: 0;
   transition: z-index 200ms;
