--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   position: absolute;
   top: 0px;
   left: 0px;
+  background-color: #747882;
 }
 
 #toolbox {
