--- a/src/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
+++ b/src/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
@@ -77,7 +77,8 @@
   margin-inline-end: 4px;
 }
 
-.sources-list .tree .focused .img {
+.sources-list .tree .focused .img,
+.sources-list .tree .focused .label {
   background-color: #ffffff;
 }
 
