Sources list background should not be white

--- a/src/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
+++ b/src/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
@@ -77,8 +77,7 @@
   margin-inline-end: 4px;
 }
 
-.sources-list .tree .focused .img,
-.sources-list .tree .focused .label {
+.sources-list .tree .focused .img {
   background-color: #ffffff;
 }
 
