--- a/src/styles.css
+++ b/src/styles.css
@@ -194,6 +194,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 @import url("devtools/client/themes/toolbox.css");
 @import url("devtools/client/themes/variables.css");
 @import url("devtools/client/themes/webconsole.css");
+@import url("devtools/client/themes/markup.css");
 @import url("devtools/client/themes/common.css");
 @import url("devtools/client/debugger/src/debugger.css");
 @import url("devtools/client/debugger/dist/vendors.css");
