--- a/src/styles.css
+++ b/src/styles.css
@@ -53,7 +53,6 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   margin-left: 5px;
 }
 
-
 .command-button {
   float: left;
 }
@@ -70,7 +69,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   padding-top: 2px;
 }
 
-.jsdebugger .CodeMirror {
+.debugger .CodeMirror {
   height: 100%;
 }
 
