--- a/src/devtools/client/webconsole/components/App.css
+++ b/src/devtools/client/webconsole/components/App.css
@@ -27,6 +27,8 @@ body {
   --object-inspector-hover-background: transparent;
   --attachment-margin-block-end: 3px;
   --primary-toolbar-height: 29px;
+  display: flex;
+  flex-direction: column;
   /*display: grid;*/
   /*
     * Here's the design we want in in-line mode
@@ -68,7 +70,6 @@ body {
   grid-template-columns: minmax(200px, 1fr) minmax(0, auto);
   */
   width: 100vw;
-  overflow: hidden;
   color: var(--console-output-color);
   -moz-user-focus: normal;
 }
@@ -102,6 +103,7 @@ body {
 
 .flexible-output-input > .webconsole-output:not(:empty) {
   min-height: var(--console-row-height);
+  max-height: calc(100% - 60px);
 }
 
 /* webconsole.css | chrome://devtools/skin/webconsole.css */
@@ -135,16 +137,14 @@ body {
   --jsterm-padding-top: 0;
   --jsterm-padding-bottom: 0;
   min-height: calc(
-    var(--console-row-height) +
-    var(--jsterm-border-width) +
-    var(--jsterm-padding-top) +
-    var(--jsterm-padding-bottom)
+    var(--console-row-height) + var(--jsterm-border-width) +
+      var(--jsterm-padding-top) + var(--jsterm-padding-bottom)
   );
   padding-top: var(--jsterm-padding-top);
   padding-bottom: var(--jsterm-padding-bottom);
   border-top-color: var(--theme-splitter-color);
   border-top-width: var(--jsterm-border-width);
-  border-top-style: solid; 
+  border-top-style: solid;
   flex-grow: 100;
 }
 
@@ -152,7 +152,8 @@ body {
   --jsterm-border-width: 1px;
 }
 
-.webconsole-app:not(.jsterm-editor):not(.eager-evaluation) .jsterm-input-container {
+.webconsole-app:not(.jsterm-editor):not(.eager-evaluation)
+  .jsterm-input-container {
   /* The input should be full-height when eager evaluation is disabled. */
   flex-grow: 1;
   --jsterm-padding-top: var(--console-input-extra-padding);
@@ -190,7 +191,6 @@ body {
   border-top: 1px solid var(--theme-splitter-color);
   border-inline-end: 1px solid var(--theme-splitter-color);
 }
-
 
 .sidebar {
   display: grid;
@@ -259,12 +259,13 @@ body {
      *   rows/columns to "auto" to make them collapse when the element
      *   they contain is hidden.
      */
-  grid-template-areas: "notification      notification               notification"
-                       "editor-toolbar    filter-toolbar             sidebar"
-                       "editor            filter-toolbar-secondary   sidebar"
-                       "editor            output                     sidebar"
-                       "eager-evaluation  output                     sidebar"
-                       "reverse-search    output                     sidebar";
+  grid-template-areas:
+    "notification      notification               notification"
+    "editor-toolbar    filter-toolbar             sidebar"
+    "editor            filter-toolbar-secondary   sidebar"
+    "editor            output                     sidebar"
+    "eager-evaluation  output                     sidebar"
+    "reverse-search    output                     sidebar";
   grid-template-rows:
     auto
     var(--primary-toolbar-height)
@@ -302,7 +303,9 @@ body {
   height: unset;
 }
 
-.jsterm-editor .webconsole-editor-toolbar .webconsole-editor-toolbar-executeButton {
+.jsterm-editor
+  .webconsole-editor-toolbar
+  .webconsole-editor-toolbar-executeButton {
   padding-inline: 4px 8px;
   height: 20px;
   margin-inline-start: 5px;
@@ -310,8 +313,9 @@ body {
   align-items: center;
 }
 
-
-.jsterm-editor .webconsole-editor-toolbar .webconsole-editor-toolbar-executeButton::before {
+.jsterm-editor
+  .webconsole-editor-toolbar
+  .webconsole-editor-toolbar-executeButton::before {
   height: 16px;
   width: 16px;
   -moz-context-properties: fill;
@@ -319,7 +323,9 @@ body {
   margin-inline-end: 2px;
 }
 
-.jsterm-editor .webconsole-editor-toolbar .webconsole-evaluation-selector-button {
+.jsterm-editor
+  .webconsole-editor-toolbar
+  .webconsole-evaluation-selector-button {
   height: 20px;
   margin-inline-start: 5px;
   padding-inline: 8px 16px !important;
@@ -327,35 +333,51 @@ body {
   background-position-y: calc(50% + 1px) !important;
 }
 
-.jsterm-editor .webconsole-editor-toolbar .webconsole-editor-toolbar-history-prevExpressionButton {
+.jsterm-editor
+  .webconsole-editor-toolbar
+  .webconsole-editor-toolbar-history-prevExpressionButton {
   grid-column: -5 / -6;
 }
 
-.jsterm-editor .webconsole-editor-toolbar .webconsole-editor-toolbar-history-nextExpressionButton {
+.jsterm-editor
+  .webconsole-editor-toolbar
+  .webconsole-editor-toolbar-history-nextExpressionButton {
   grid-column: -4 / -5;
 }
 
-.jsterm-editor .webconsole-editor-toolbar .webconsole-editor-toolbar-reverseSearchButton {
+.jsterm-editor
+  .webconsole-editor-toolbar
+  .webconsole-editor-toolbar-reverseSearchButton {
   grid-column: -3 / -4;
 }
 
-.jsterm-editor .webconsole-editor-toolbar .webconsole-editor-toolbar-historyNavSeparator {
+.jsterm-editor
+  .webconsole-editor-toolbar
+  .webconsole-editor-toolbar-historyNavSeparator {
   grid-column: -2 / -3;
 }
 
-.jsterm-editor .webconsole-editor-toolbar .webconsole-editor-toolbar-closeButton {
+.jsterm-editor
+  .webconsole-editor-toolbar
+  .webconsole-editor-toolbar-closeButton {
   grid-column: -1 / -2;
 }
 
-.jsterm-editor .webconsole-editor-toolbar .webconsole-editor-toolbar-history-prevExpressionButton::before {
+.jsterm-editor
+  .webconsole-editor-toolbar
+  .webconsole-editor-toolbar-history-prevExpressionButton::before {
   background-size: 16px;
 }
 
-.jsterm-editor .webconsole-editor-toolbar .webconsole-editor-toolbar-history-nextExpressionButton::before {
+.jsterm-editor
+  .webconsole-editor-toolbar
+  .webconsole-editor-toolbar-history-nextExpressionButton::before {
   background-size: 16px;
 }
 
-.jsterm-editor .webconsole-editor-toolbar .webconsole-editor-toolbar-reverseSearchButton::before {
+.jsterm-editor
+  .webconsole-editor-toolbar
+  .webconsole-editor-toolbar-reverseSearchButton::before {
   background-size: 14px;
 }
 
